Fixed script input via textarea

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <body>
     <label for="txt_script">Script:</label><br>
-    <textarea id="txt_script" name="txt_script"></textarea><br>
+    <textarea id="txt_script" name="txt_script" rows="5" cols="50"></textarea><br>
     <button id="btn_run" onclick="run();">run</button>
     <script src="compiler.js"></script>
     <script src="sketch.js"></script>
